--- a/style.css
+++ b/style.css
@@ -5,17 +5,95 @@
   color: white;
   font-family: "Playfair Display";
 }
-.main-body {
-  width: 100%;
-  height: 100vh;
-  background-image: url("main.png");
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.links{
+    font-size: 16px;
+    letter-spacing: 16px;
+    font-weight: 400;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    text-align: center;
+    align-items: center;
 }
-.main-text {
-  font-size: 32px;
-  letter-spacing: 26px;
-  font-weight: 100;
+nav{
+  display: flex;
+  padding: 32px 32px 0 32px;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-links{
+  font-size: 16px;
+    letter-spacing: 16px;
+    font-weight: 400;
+    z-index: 1;
+    display: none;
+    gap: 40px;
+    text-align: center;
+    align-items: center;
+}
+.nav-links a {
+  width: fit-content;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 1.5px;
+  background-color: #ffffff;
+  transition: width 0.3s ease-in-out;
+}
+
+.nav-links a:hover::after {
+  width: 100%;
+}
+.links a{
+  width: fit-content;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+}
+.links a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 1.5px;
+  background-color: #ffffff;
+  transition: width 0.3s ease-in-out;
+}
+.links a:hover::after{
+  width: 100%;
+}
+
+.sub-page nav{
+  width: 100%;
+  height: fit-content;
+}
+
+@media screen and (min-width: 1024px) {
+
+  nav{
+    padding: 32px 64px 0 64px;
+  }
+  .nav-links{
+    display: flex;
+  }
+    .links {
+      font-size: 24px;
+      letter-spacing: 16px;
+      font-weight: 400;
+      z-index: 1;
+      display: flex;
+      flex-direction: row;
+      gap: 96px;
+    }
 }
